css/main.css
/* ... */
/* GRADIENT OVERLAY */
.sm-pro-overlay {
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 65%;
    background: linear-gradient(to top, rgba(0,0,0,0.9), rgba(0,0,0,0));
    border-radius: 20px;
}



.sm-pro-title {
    position: absolute;
    bottom: 25px;
    left: 25px;
    color: #c99a4b;
    font-size: 25px;
    font-weight: 600;
    z-index: 2;
    letter-spacing: 0.5px;
    opacity: 0;
    transform: translateY(20px);
    transition: all 0.3s ease;
}

/* SHOW TITLE ON HOVER */
.sm-pro-card:hover .sm-pro-title {
    opacity: 1;
    transform: translateY(0);
}
@media (max-width: 1199px) {
    .sm-pro-section{
        display: none;
    }
}
@media (min-width: 1200px) {
    .package-four-area{
        display: none;
    }
}

